data/derived/fa15/progs/unify/prog3344.ml.out
Characters 33-45:
  let stringOfList f l = sepConcat (List.map l);;
                                   ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
